# Nexus-v2

./: README.md  setup.sh
docs/: 0000-documenting-the-process.md  0001-scaffolding-the-monorepo.md  01-authentication-cli-api-implementation-20250705-060000.md  01_multi_cloud_implementation_2025-07-05_10-00-00.md  02-ai-ml-models-implementation-20250705-070000.md  02_edge_computing_implementation_2025-07-05_11-00-00.md  03-container-orchestration-implementation-20250705-080000.md  03_ai_edge_optimization_implementation_2025-07-05_11-40-00.md  04-production-infrastructure-mvp-completion-20250705-090000.md  05-platform-production-ready-20250105-090000.md  06-advanced-analytics-implementation-20250105-090000.md  07-advanced-analytics-complete-20250105-100000.md  08-21-2025__Deliverables.md  08-21-2025__Features.md  08-21-2025__OutcomeSoFar.md  08-21-2025__Unrestricted-POC_Deliverables.md  08-platform-complete-100-percent-20250105-110000.md  09-platform-100-complete-final-20250105-120000.md  AI_ML_GUIDE.md  AI_PLATFORM_STATUS.md  CompletionSummary.md  NEXUS_PLATFORM_DEPLOYMENT_SUMMARY.md  PLATFORM_STATUS_FINAL.md  PRODUCTION_READINESS.md  PROJECT_STRUCTURE.md  architecture.md  cert-manager-vault.md  ci-otlp-tls.md  cicd-hardening.md  cost-effective-development-strategy.md  currently-implemented-features__20250710_225316.md  dev-runbook.md  developer-guide.md  execution.proto  execution_openapi.yaml  howto-cert-manager-vault.md  index.md  infrastructure-summary.md  mkdocs.yml  opa.md  (+7 more)
infra/: README-kong-kuma.md  (+2 more)
services/ai-inference/: project.json  pyproject.toml
(+965 files in other folders)
