[project]
name = "ai-inference"
version = "0.1.0"
description = "ai-inference microservice for AIC ai-platform"
authors = [
    {name = "Thomas Carter",email = "thomas.carter@appliedinnovationcorp.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "torch (>=2.8.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
